# RacingmaybeCpp

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  Racingmaybe  cmake_install.cmake  compile_shaders.bat  compile_shaders.sh
Libraries/glad/: gl.h
Libraries/glfw-3.3.6/: Makefile  cmake_install.cmake  cmake_uninstall.cmake
Libraries/glfw-3.3.6/examples/: Makefile  boing  cmake_install.cmake  gears  heightmap  offscreen  particles  sharing  simple  splitview  wave
Libraries/glfw-3.3.6/src/: Makefile  cmake_install.cmake
Libraries/glfw-3.3.6/tests/: Makefile  clipboard  cmake_install.cmake  cursor  empty  events  gamma  glfwinfo  icon  iconify  inputlag  joysticks  joysticks.c  monitors  msaa  opacity  reopen  tearing  threads  timeout  title  triangle-vulkan  windows
glad/: glad.h
res/pics/: Fabulvania_character.png~  cursorCanPoint.png~  cursorIsPoint.png~  finishBack.png~  selectableUpgradeButton.kra  tachometerDotLarge.png~  tachometerDotSmall.png~  tachometerReline.png~  turbometer.png~
res/pics/numbers/: 1.png~  R.png~
res/pics/upgrade/: upgrade0.kra  upgrade1.kra  upgrade2.kra  upgrade2.kra~  upgrade3.kra~  upgrade3.png~  upgrade4.kra  upgrade4.png~  upgrade5.kra~  upgrade6.kra  upgrade7.kra~  upgrade9.kra~  upgrade9.png~  upgradeNullNormal.png~  upgradeSelected.png~
res/shaders/: mainFragment.glsl
src/: audio.cpp  g_pipeline.cpp  g_pipeline.h  gl.c  main.cpp  timer.cpp  timer.h  window.cpp  window.h
src/adt/: ICloneStringable.java  ICreateFloatAction.java  IPressAction.java  IStringAction.java
src/audio/: Audio.cpp  AudioMaster.h  AudioMaster.java  AudioRemote.h  AudioRemote.java  AudioTypes.java  CarAudio.java  SfxTypes.java  Source.java
src/communication/: Communicator.java  GameInfo.java  Mail.java  Response.java  SteamCommunicator.java  Translator.java
src/elem/: Animation.java  ColorBytes.java  CursorType.java  Font.java
src/elem/interactions/: Gearbox.java  LobbyTopbar.java  RegularTopbar.java  Tile.java  TilePlayer.java  TileUpgrade.java  TopbarInteraction.cpp  TopbarInteraction.h  TopbarInteraction.java  TransparentTopbar.java
src/elem/objects/: Camera.java  GameObject.java  IGameObject.java  Model.java  Sprite.java  SpriteNumeric.java
src/elem/ui/: ButtonNavigation.java  Console.java  IUIObject.java  IUIPressable.java  UIButton.java  UIButtonLobby.java  UIFont.java  UILabel.java  UILabelRow.java  UILeaderboardPlayerButton.java  UINavigationAction.java  UISceneInfo.java  UIScrollable.java  UIScrollableLabel.java  UISlider.java  UITextField.java  UIWindowInfo.java
src/elem/ui/modal/: UIBonusModal.java  UIExitModal.java  UIMessageModal.java  UIUsernameModal.java
src/elem/upgrades/: ChosenBonus.java  IBuyAction.java  ICheckPositionAction.java  IModifierAction.java  ITileAction.java  Layer.java  RegVals.java  Store.java  Upgrade.java  UpgradeAction.java  UpgradePrice.java  Upgrades.java
src/engine/graphics/: Camera.cpp  Camera.h  GameObject.cpp  GameObject.h  Mesh.java  Renderer.cpp  Renderer.h  Renderer.java  Shader.java  Texture.java  UIRender.java
src/engine/io/: InputHandler.cpp  InputHandler.h  InputHandler.java  Window.cpp  Window.h  Window.java
src/engine/math/: Matrix4f.java  Vec2.java  Vec3.java
src/engine/utils/: Timer.cpp  Timer.h  Timer.java
src/game_modes/: GameMode.java  GameModes.java  GolfMode.java  LeadoutMode.java  SinglePlayerMode.java
src/main/: Features.java  Game.cpp  Game.h  Game.java  ResourceHandler.java  Texts.java
src/main/steam/: SteamHandler.java  SteamMain.java
src/player_local/: Bank.java  BankType.java  Player.java
src/player_local/Car/: Car.java  CarFuncs.java  CarModel.java  CarStats.java  Rep.java
src/scenes/: SceneData.cpp  SceneData.h  SceneEnvir.cpp  SceneEnvir.h  SceneHandler.cpp  SceneHandler.h  SceneHandler.java  Scenes.h  Scenes.java
src/scenes/adt/: ISceneManipulation.java  ISceneManipulator.h  NkContext.cpp  NkContext.h  Scene.java  SceneChangeAction.java  Subscene.java  Visual.java
src/scenes/game/: GameRemote.java  GameRemoteMaster.java  Lobby.java  Race.java
src/scenes/game/lobby_subscenes/: CarChoiceSubscene.java  SetupSubscene.java  UpgradesSubscene.java
src/scenes/game/racing_subscenes/: FinishVisual.java  RaceVisual.java  WinVisual.java
src/scenes/regular/: JoiningScene.java  LeaderboardScene.java  MainMenuScene.java  MultiplayerScene.java  OptionsScene.java  SingleplayerScene.java  TestScene.cpp  TestScene.h
src/settings_and_logging/: ControlsSettings.java  RegularSettings.java  Settings.java
src/settings_and_logging/hotkeys/: RaceKeys.java
src/test/: TestTranslator.java
src/vulkan/: engine_device.cpp  engine_device.h  pipeline.cpp  pipeline.h
